--- a/scenarioT/weather/cacheable/css/mainmenu/index-ie8-e.css
+++ b/scenarioT/weather/cacheable/css/mainmenu/index-ie8-e.css
@@ -3,12 +3,12 @@
 #iconmenu li {width: 150px; height: 130px; position: absolute; top: 2px; display: block; list-style: none;}
 #iconmenu a {width: 150px; height: 130px; display: block; border: solid 1px #fff;}
 #iconmenu a:hover {border: solid 1px #000;}
-#iconmenu #panel1c {left: 0px; background: url(/data/wxoimages/homeCurrent_150x130_e.png);}
-#iconmenu #panel2c {left: 21%; background: url(/data/wxoimages/homeAlert_150x130_e.png);}
-#iconmenu #panel3c {left: 42%; background: url(/data/wxoimages/homeRadar_150x130.png);} 
-#iconmenu #panel4c {left: 63%; background: url(/data/wxoimages/homeSatellite_150x130.png);}
-#iconmenu #panel5c {left: 84%; background: url(/data/wxoimages/homeJet_150x130_e.png);}
-#iconmenu #panel5b {left: 84%; background: url(/data/wxoimages/homeHurricane_150x130.png);}
+#iconmenu #panel1c {left: 0px; background: url(../../../data/wxoimages/homeCurrent_150x130_e.png);}
+#iconmenu #panel2c {left: 21%; background: url(../../../data/wxoimages/homeAlert_150x130_e.png);}
+#iconmenu #panel3c {left: 42%; background: url(../../../data/wxoimages/homeRadar_150x130.png);} 
+#iconmenu #panel4c {left: 63%; background: url(../../../data/wxoimages/homeSatellite_150x130.png);}
+#iconmenu #panel5c {left: 84%; background: url(../../../data/wxoimages/homeJet_150x130_e.png);}
+#iconmenu #panel5b {left: 84%; background: url(../../../data/wxoimages/homeHurricane_150x130.png);}
 
 #linkmenu {position: relative; margin: 10px auto; padding: 15px; width: 96.5%;}
 #linkmenu li {width: 150px; text-align:center; position: absolute; top: 0px; list-style: none;}
